crates/unsoundness_checker/tests/snapshots/invalid_function_defaults/markdown_test__snippet_01.snap
---
source: crates/unsoundness_checker/tests/markdown_test.rs
expression: output
---
error[invalid-function-defaults]: Setting `__defaults__` to an object of type `tuple[Literal["string"]]` on a function may lead to runtime type errors.
 --> snippet_01.py:4:1
  |
2 |     return x
3 |
4 | foo.__defaults__ = ("string",)
  | ^^^^^^^^^^^^^^^^
5 |
6 | foo.__defaults__ = None
  |
info: rule `invalid-function-defaults` was selected in the configuration file

error[invalid-function-defaults]: Setting `__defaults__` to an object of type `None` on a function may lead to runtime type errors.
 --> snippet_01.py:6:1
  |
4 | foo.__defaults__ = ("string",)
5 |
6 | foo.__defaults__ = None
  | ^^^^^^^^^^^^^^^^
7 |
8 | def bar(x: int = 1, y: str = "string", z: bool = True) -> int:
  |
info: rule `invalid-function-defaults` was selected in the configuration file

error[invalid-function-defaults]: Setting `__defaults__` to an object of type `tuple[Literal[1], Literal["string"], Literal["string"]]` on a function may lead to runtime type errors.
  --> snippet_01.py:11:1
   |
 9 |     return x
10 |
11 | bar.__defaults__ = (1, "string", "string")
   | ^^^^^^^^^^^^^^^^
12 |
13 | bar.__defaults__ = None
   |
info: rule `invalid-function-defaults` was selected in the configuration file

error[invalid-function-defaults]: Setting `__defaults__` to an object of type `None` on a function may lead to runtime type errors.
  --> snippet_01.py:13:1
   |
11 | bar.__defaults__ = (1, "string", "string")
12 |
13 | bar.__defaults__ = None
   | ^^^^^^^^^^^^^^^^
14 |
15 | bar.__defaults__ = (1, "string")
   |
info: rule `invalid-function-defaults` was selected in the configuration file

error[invalid-function-defaults]: Setting `__defaults__` to an object of type `tuple[Literal[1], Literal["string"]]` on a function may lead to runtime type errors.
  --> snippet_01.py:15:1
   |
13 | bar.__defaults__ = None
14 |
15 | bar.__defaults__ = (1, "string")
   | ^^^^^^^^^^^^^^^^
   |
info: rule `invalid-function-defaults` was selected in the configuration file
